--- a/products.html
+++ b/products.html
@@ -126,8 +126,10 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div id="jumbo" class="jumbotron">
-      <div class="container jumbo">
-        <h1 class="display-3 mt-3">Products</h1>
+      <div class="container jumbo text-center" style="color: black;">
+        <h1 class="display-3 font-weight-normal text-center" style="color: black;">Products</h1>
+
+        <!-- <h1 class="display-3 mt-3">Products</h1> -->
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a
           jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
         </p>
@@ -149,10 +151,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -192,10 +194,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -235,10 +237,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -278,10 +280,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -321,10 +323,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -364,10 +366,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -407,10 +409,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -450,10 +452,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -493,10 +495,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -536,10 +538,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -579,10 +581,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -622,10 +624,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -673,10 +675,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -716,10 +718,10 @@
                   content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                   </div>
-                  <small class="text-muted">9 mins</small>
+               <!--   <small class="text-muted">9 mins</small> -->
                 </div>
               </div>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
