updates after merge

--- a/products.html
+++ b/products.html
@@ -147,8 +147,8 @@
               <img src="images/Products/grapejelly.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px">
               <div class="card-body">
                 <h5 class="card-title">Grape Jelly</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Organic Sugar, Water, Organic Concord Grape Juice Concentrate, Citric Acid, Fruit Pectin.
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -190,8 +190,7 @@
               <img src="images/Products/Strawberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Strawberry Jelly</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Water, Organic Strawberries, Organic Cane Sugar, Citric Acid, Natural Flavor, Organic Fruit And Vegetable Juice</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -233,8 +232,7 @@
               <img src="images/Products/applebutter.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Apple Butter</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text"> Apples, Cinnamon, Allspice, Brown Sugar, Organic Cane Sugar, Honey, Organic Fruit And Vegetable Juice</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -276,8 +274,7 @@
               <img src="images/Products/Blackberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Blackberry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Organic Seedless Blackberry Puree, Organic Vegetable Juice, Organic Cane Sugar, Fruit Pectin</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -319,8 +316,8 @@
               <img src="images/Products/blueberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Blueberry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Organic Wild Blueberries, Organic Cane Sugar, Apple Pectin, Grape Juice Concentrate, Citric Acid, Fruit Pectin.
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -362,8 +359,7 @@
               <img src="images/Products/mixberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Mixed Berry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Strawberries (Organic), Raspberries (Organic), Blueberries (Organic), Grape Puree (Organic), Sugar Cane Syrup, Fruit Pectin.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -405,8 +401,8 @@
               <img src="images/Products/raspberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Raspberry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text"> Organic Cane Sugar, Organic Raspberries, Fruit Pectin, Calcium Chloride, Citric Acid, Organic Grap Juice, Water, Salt.
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -447,9 +443,8 @@
             <div class="card mb-4 shadow-sm">
               <img src="images/Products/Cinnamon-Spiced-Triple-Berry-Jam.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
-                <h5 class="card-title">Cinnamon Spice Triple Berry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Cinnamon Triple Berry</h5>
+                <p class="card-text"> Berry Mix- (Organic Strawberries, Blackberries, Blueberries), Water, Organic Sugar, Fruit Pectin, Citric Acid, Cinnamon, Allspice.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -491,8 +486,7 @@
               <img src="images/Products/cinnamonblueberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Cinnamon Blueberry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Organic Wild Blueberries, Organic Cane Sugar, Cinnamon Apple Pectin, Ascorbic Acid (Vitamin C), Citric Acid.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -534,8 +528,7 @@
               <img src="images/Products/Ginger-Cardamom-Pear-Butter.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="170px"></img>
               <div class="card-body">
                 <h5 class="card-title">Ginger Cardamom Pear Butter</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Bartlett Pears, Organic Evaporated Cane Juice, Cardamom, Ginger, Lemon Juice, Salt, Cinnamon Apple Pectin.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -577,8 +570,7 @@
               <img src="images/Products/lemon.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Lemon</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Meyer Lemons, Cinnamon Apple Pectin, Fresh Meyer Lemon Juice, Organic Cane Juice</p><br>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -620,8 +612,8 @@
               <img src="images/Products/superberry.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Super Berry</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Wild Blueberries, Organic Strawberries, Organic Blueberries, Cane Sugar, Cinnamon Apple Pectin, Citric Acid.
+                </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
