--- a/contacts.html
+++ b/contacts.html
@@ -253,7 +253,7 @@
                             <div class="form-group">
                                 <textarea class="form-control" name="message" placeholder="Message" rows="7"
                                     data-form-field="Message"></textarea>
-                                <button type="submit" class="btn btn-lg btn-danger w-100">CONTACT US</button>
+                                <button type="submit" class="btn btn-lg btn-danger w-100" style="background-color:#ff5c5c;">CONTACT US</button>
                             </div>
 
                         </form>
