updates after merge

--- a/contacts.html
+++ b/contacts.html
@@ -253,7 +253,8 @@
                             <div class="form-group">
                                 <textarea class="form-control" name="message" placeholder="Message" rows="7"
                                     data-form-field="Message"></textarea>
-                                <button type="submit" class="btn btn-lg btn-danger w-100" style="background-color:#ff5c5c;">CONTACT US</button>
+                                <button type="submit" class="btn btn-lg btn-danger w-100"
+                                    style="background-color:#ff5c5c;">CONTACT US</button>
                             </div>
 
                         </form>
@@ -272,60 +273,60 @@
 
         </section>
     </div>
-        <!-- FOOTER BEGINS HERE -->
-        <!-- <div class="container marketing"> -->
-        <footer id="contact-footer" class="page-footer font-small blue col-md-12">
-            <div class="container-fluid text-center text-md-left">
-                <!-- Three columns of text below the carousel -->
-                <div class="row mt-5 mb-2 h-auto">
-                    <div class="col-md-4">
-                        <img src="images/jamsjellieslogo.png" height="200" width="200" alt="Logo"
-                            style="margin-left: 75px;" />
-                    </div>
-                    <!-- /.col-lg-4 -->
-                    <div class="col-md-4">
-                        <br /><br />
-                        <h4 class="text-uppercase">MH Jams&Jellies</h4>
-                        <address>
-                            <!-- <strong>MHJamsandJellies</strong><br> -->
-                            Visit us at: 123 Pickup truck lane<br />
-                            Charlotte, NC 28212<br />
-                            Phone Number: 704-123-4567<br />
-                            Email:
-                            <a href="mailto: info@mhjamsandjellies.com">info@MHJamsandJellies.com</a><br />
-                        </address>
-                    </div>
-                    <!-- /.col-lg-4 -->
-                    <div class="col-md-2">
-                        <br /><br />
-                        <h4 class="text-uppercase">Site</h4>
-
-                        <ul class="list-unstyled">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="contacts.html">Products</a></li>
-                            <li><a href="contacts.html">About</a></li>
-                            <li><a href="contacts.html#cont">Contact</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Grid column -->
-                    <!-- Grid row -->
-                    <p class="float-right col-md-2" style="margin: auto;">
-                        <a href="#">Back to top</a>
-                    </p>
+    <!-- FOOTER BEGINS HERE -->
+    <!-- <div class="container marketing"> -->
+    <footer id="contact-footer" class="page-footer font-small blue col-md-12">
+        <div class="container-fluid text-center text-md-left">
+            <!-- Three columns of text below the carousel -->
+            <div class="row mt-5 mb-2 h-auto">
+                <div class="col-md-4">
+                    <img src="images/jamsjellieslogo.png" height="200" width="200" alt="Logo"
+                        style="margin-left: 75px;" />
                 </div>
-                <!-- Footer Links -->
-            </div>
+                <!-- /.col-lg-4 -->
+                <div class="col-md-4">
+                    <br /><br />
+                    <h4 class="text-uppercase">MH Jams&Jellies</h4>
+                    <address>
+                        <!-- <strong>MHJamsandJellies</strong><br> -->
+                        Visit us at: 123 Pickup truck lane<br />
+                        Charlotte, NC 28212<br />
+                        Phone Number: 704-123-4567<br />
+                        Email:
+                        <a href="mailto: info@mhjamsandjellies.com">info@MHJamsandJellies.com</a><br />
+                    </address>
+                </div>
+                <!-- /.col-lg-4 -->
+                <div class="col-md-2">
+                    <br /><br />
+                    <h4 class="text-uppercase">Site</h4>
 
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">
-                © 2020 Copyright:
-                <a href="#"> MH Jams&Jellies</a>
+                    <ul class="list-unstyled">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="contacts.html">Products</a></li>
+                        <li><a href="contacts.html">About</a></li>
+                        <li><a href="contacts.html#cont">Contact</a></li>
+                    </ul>
+                </div>
+
+                <!-- Grid column -->
+                <!-- Grid row -->
+                <p class="float-right col-md-2" style="margin: auto;">
+                    <a href="#">Back to top</a>
+                </p>
             </div>
-            <!-- Copyright -->
-        </footer>
-        <!-- FOOTER ENDS HERE -->
-    
+            <!-- Footer Links -->
+        </div>
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">
+            © 2020 Copyright:
+            <a href="#"> MH Jams&Jellies</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- FOOTER ENDS HERE -->
+
 
 
 
