--- a/products.html
+++ b/products.html
@@ -663,8 +663,7 @@
               <img src="images/Products/up-and-coming/guava.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Guava</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Guave (Organic), Water, Lemon Juice Concentrate (Organic), Dried Sugar Cane Syrup (Organic), Fruit Pectin.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -706,8 +705,7 @@
               <img src="images/Products/up-and-coming/pineapple.png" class="card-img-top" alt="strawberry-jelly" width="100%" height="190px"></img>
               <div class="card-body">
                 <h5 class="card-title">Pineapple</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <p class="card-text">Pinapples (Organic), Water, Lemon Juice Concentrate (Organic), Dried Sugar Cane Syrup (Organic), Fruit Pectin.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!-- <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
