updates after merge

--- a/products.html
+++ b/products.html
@@ -126,8 +126,8 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div id="jumbo" class="jumbotron">
-      <div class="container jumbo text-center" style="color: black;">
-        <h1 class="display-3 font-weight-normal text-center" style="color: black;">Products</h1>
+      <div class="container jumbo text-center" style="color: whitesmoke;">
+        <h1 class="display-3 font-weight-normal text-center" style="color: whitesmoke;">Products</h1>
 
         <!-- <h1 class="display-3 mt-3">Products</h1> -->
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a
