--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ info about the company so I can make contact if I have questions. -->
                 <h1 class="display-3 font-weight-normal" style="color: whitesmoke;">M&H <br />JAMS & JELLIES</h1>
                 <!-- <h5 class="display-3 font-weight-normal" style="color: #646161;">FATHER NATURE™ TESTED,</h5> -->
                 <!-- <a class="btn btn-outline-danger" href="credit_card.html">Order now</a> -->
-                <h3 style="color: whitesmoke !important;"><strong>With real fruit as the first ingredient, it's no wonder that <em>M&H</em><sup>®</sup> Natural Fruit Spread is natural enough for the Nature&nbsp;family.</strong></h3>
+                <h3 style="color: whitesmoke !important;">With real fruit as the first ingredient, it's no wonder that <em>M&H</em><sup>®</sup> Natural Fruit Spread is natural enough for the Nature&nbsp;family.</h3>
             </div>
             <div class="product-device shadow-sm d-none d-md-block"></div>
             <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
